# ergo_uvo

./: README.md
uvo/: CMakeLists.txt  package.xml
uvo/bags/: README.md
uvo/config/: mono_VO_intrinsics.yaml  mono_VO_parameters.yaml  stereo_VO_intrinsics.yaml  stereo_VO_parameters.yaml
uvo/include/: visual_odometry.h
uvo/launch/: UVO_node.launch
uvo/src/: UVO_node.cpp
uvo_libraries/: CMakeLists.txt  package.xml
uvo_libraries/include/uvo_libraries/: VO_utility.h  math_utility.h
uvo_libraries/src/: VO_utility.cpp  math_utility.cpp
visual_odometry/: CMakeLists.txt  package.xml
visual_odometry/config/: mono_VO_intrinsics.yaml  mono_VO_parameters.yaml  stereo_VO_intrinsics.yaml  stereo_VO_parameters.yaml
visual_odometry/include/visual_odometry/: ROS_print_in_color.h  VO_utility.hpp  math_utility.hpp
visual_odometry/launch/: mono_VO.launch  stereo_VO.launch
visual_odometry/src/: mono_VO.cpp  stereo_VO.cpp
