cmake_minimum_required(VERSION 3.0.2)
project(uvo)

find_package(catkin REQUIRED COMPONENTS
  cv_bridge
  image_transport
  roscpp
  rospy
  std_msgs
  sensor_msgs
  geometry_msgs
  pcl_ros
  uvo_libraries
)

find_package(Eigen3 REQUIRED)
if(NOT EIGEN3_FOUND)
    message(FATAL_ERROR "ERROR: Could not find Eigen3 libraries [REQUIRED]!")
endif()

find_package(OpenCV 4 REQUIRED) 

include_directories(
  include
  ${catkin_INCLUDE_DIRS}
  ${Eigen_INCLUDE_DIRS}
  ${OpenCV_INCLUDE_DIRS}
)

catkin_package()


# ------------------------------------------------------------------------------------------------------------------------
# ------------------------------------------------------------------------------------------------------------------------
# ------------------------------------------------------------------------------------------------------------------------
# ------------------------------------------------------------------------------------------------------------------------
# ------------------------------------------------------------------------------------------------------------------------


# NODE FOR VISUAL ODOMETRY --- BASED ON VISUAL ODOMETRY CLASS
add_executable(UVO_node src/UVO_node.cpp)
add_dependencies(UVO_node ${catkin_EXPORTED_TARGETS} )
target_link_libraries(UVO_node 
${catkin_LIBRARIES}
${Eigen_LIBRARIES}
${OpenCV_LIBRARIES}
)


# ------------------------------------------------------------------------------------------------------------------------
# ------------------------------------------------------------------------------------------------------------------------
# ------------------------------------------------------------------------------------------------------------------------
# ------------------------------------------------------------------------------------------------------------------------
# ------------------------------------------------------------------------------------------------------------------------